--- a/current/package.json
+++ b/current/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^4.30.0",
+    "@clerk/nextjs": "^6.11.2",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.1.1",
