--- a/IEEE-Solar-Backend/pyproject.toml
+++ b/IEEE-Solar-Backend/pyproject.toml
@@ -16,6 +16,8 @@ dependencies = [
     "mongoengine (>=0.29.1,<0.30.0)",
     "requests (>=2.32.3,<3.0.0)",
     "tqdm (>=4.67.1,<5.0.0)",
+    "numpy (>=2.2.2,<3.0.0)",
+    "prophet (>=1.1.6,<2.0.0)",
 ]
 
 
