--- a/current/package.json
+++ b/current/package.json
@@ -10,12 +10,12 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^4.30.0",
-    "@clerk/nextjs": "^6.11.2",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-popover": "^1.1.4",
-    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-slot": "^1.1.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "convex": "^1.6.3",
